fix/minor: alignement layout consistency

--- a/assets/sass/fractal6.scss
+++ b/assets/sass/fractal6.scss
@@ -2832,10 +2832,6 @@ i.is-liked {
     & > .field {
         margin-bottom: 0.25rem;
     }
-
-    .tabs {
-        margin-bottom: 0;
-    }
 }
 
 .filterBar.has-addons {
